<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_most_popular"
        android:title="@string/action_popularity_sort"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_highest_rated"
        android:title="@string/action_highest_rated_sort"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorities_api"
        android:title="@string/action_favorities_api"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorities_db"
        android:title="@string/action_favorities_db"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
